# ullm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
crates/ullm-cli/: Cargo.toml
crates/ullm-cli/examples/: embed.rs
crates/ullm-cli/src/: main.rs
crates/ullm-core/: Cargo.toml
crates/ullm-core/src/: dequant.rs  device.rs  dtype.rs  error.rs  ir.rs  lib.rs
crates/ullm-gguf/: Cargo.toml
crates/ullm-gguf/src/: lib.rs  reader.rs  types.rs  value.rs
crates/ullm-grammar/: Cargo.toml
crates/ullm-grammar/src/: lib.rs  parser.rs  regex.rs  schema.rs  trie.rs
crates/ullm-metal/: Cargo.toml
crates/ullm-metal/src/: forward.rs  lib.rs  shader.metal
crates/ullm-model/: Cargo.toml
crates/ullm-model/src/: config.rs  constraint.rs  deltanet.rs  lib.rs  math.rs  mlx.rs  sample.rs  weights.rs
crates/ullm-model/src/testdata/: deltanet_ref.json
crates/ullm-safetensors/: Cargo.toml
crates/ullm-safetensors/src/: lib.rs
crates/ullm-server/: Cargo.toml
crates/ullm-server/src/: lib.rs
crates/ullm-tokenizer/: Cargo.toml
crates/ullm-tokenizer/src/: bpe.rs  chat.rs  hf.rs  lib.rs  spm.rs
docs/: benchmarks.md  roadmap.md
docs/adr/: 0001-language-rust.md  0002-name-ullm.md
docs/architecture/: 00-overview.md
docs/strategy/: positioning.md
examples/: README.md  structured_extraction.py  tool_call.py
grammars/: json.gbnf  person.gbnf  review.schema.json  sentiment.gbnf
tools/: gen_deltanet_ref.py
