[package]
name = "ullm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for the uLLM inference engine."

[[bin]]
name = "ullm"
path = "src/main.rs"

[dependencies]
ullm-core = { workspace = true }
ullm-gguf = { workspace = true }
ullm-tokenizer = { workspace = true }
ullm-model = { workspace = true }
ullm-metal = { workspace = true }
clap = { workspace = true }
