[package]
name = "ullm-gguf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GGUF model-file loader for the uLLM inference engine."

[dependencies]
ullm-core = { workspace = true }
memmap2 = { workspace = true }
