[package]
name = "ullm-grammar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GBNF grammar-constrained decoding for uLLM: guaranteed-valid structured output."

[dependencies]
ullm-core.workspace = true
serde_json.workspace = true
