[package]
name = "ullm-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CPU reference runtime (Llama architecture) for the uLLM inference engine."

[dependencies]
ullm-core = { workspace = true }
ullm-gguf = { workspace = true }
ullm-safetensors = { workspace = true }
ullm-metal = { workspace = true }
ullm-grammar = { workspace = true }
rayon = { workspace = true }
