[package]
name = "ullm-safetensors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SafeTensors / Hugging Face model loader for the uLLM inference engine."

[dependencies]
ullm-core = { workspace = true }
memmap2 = { workspace = true }
serde_json = { workspace = true }
