[package]
name = "ullm-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OpenAI-compatible HTTP server for the uLLM inference engine."

[dependencies]
ullm-core = { workspace = true }
ullm-gguf = { workspace = true }
ullm-safetensors = { workspace = true }
ullm-tokenizer = { workspace = true }
ullm-model = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
