[package]
name = "ullm-tokenizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tokenizers (SentencePiece / byte-level BPE) for the uLLM inference engine."

[dependencies]
ullm-core = { workspace = true }
fancy-regex = { workspace = true }
serde_json = { workspace = true }
